--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get_it:
   collection:
   syncfusion_flutter_charts: ^27.2.4
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_lints: ^4.0.0
